crates/bonsaidb-macros/tests/ui/collection/encryption_required_no_key.rs
use bonsaidb::core::schema::Collection;

#[derive(Collection)]
#[collection(name = "name", encryption_required)]
struct Test;

fn main() {}
